Login recruiter to get access_token

--- a/views/recruiter/login.hbs
+++ b/views/recruiter/login.hbs
@@ -29,12 +29,12 @@
             <h2 class="text-center">Đăng nhập với nhà tuyển dụng</h2>
             <div class="form-group mt-3">
                 <label for="email" class="label-control">Email</label>
-                <input type="email" name="email" id="id" class="form-control" placeholder="Nhập email của bạn">
+                <input type="email" name="email" id="email" class="form-control" placeholder="Nhập email của bạn" required>
             </div>
 
             <div class="form-group mt-3">
                 <label for="password" class="label-control">Mật khẩu</label>
-                <input type="password" name="password" id="password" class="form-control" placeholder="Nhập mật khẩu của bạn">
+                <input type="password" name="password" id="password" class="form-control" placeholder="Nhập mật khẩu của bạn" required>
             </div>
 
             <div class="form-group mt-3">
@@ -54,3 +54,5 @@
 </body>
 
 </html>
+
+<script src="/js/recruiter/login.js"></script>
