--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -65,7 +65,7 @@
 
 
                 <li>
-                    <a href=""> Nhà tuyển dụng</a>
+                    <a href="/recruiter"> Nhà tuyển dụng</a>
                 </li>
             </ul>
 
@@ -145,7 +145,7 @@
                 <a href="">Đăng ký</a>
             </li>
             <li>
-                <a href="" class="btn-recruiter">Nhà tuyển dụng</a>
+                <a href="/recruiter" class="btn-recruiter">Nhà tuyển dụng</a>
             </li>
         </ul>
     </div>
