Add recruitment layout

--- a/views/recruiter/manage-recruitments.hbs
+++ b/views/recruiter/manage-recruitments.hbs
@@ -1,6 +1,6 @@
 <div class="container">
     <h2 class="mt-3 text-center">Quản lý tin tuyển dụng</h2>
-    <button onclick="location.href = '/recruiter/add'" class="btn btn-success">Thêm mới tin tuyển dụng</button>
+    <button onclick="location.href = '/recruiter/add-recruitment'" class="btn btn-success">Thêm mới tin tuyển dụng</button>
     <table class="table">
         <thead>
             <tr>
