--- a/views/layouts/recruiter.hbs
+++ b/views/layouts/recruiter.hbs
@@ -42,6 +42,10 @@
                         Xem các đơn ứng tuyển
                     </a>
                 </li>
+                <li><a href="/recruiter/create-profile">
+                        Tạo hồ sơ doanh nghiệp
+                    </a>
+                </li>
                 <li><a href="">
                         Cập nhật thông tin doanh nghiệp
                     </a>
