--- a/views/recruiter/add-recruitment.hbs
+++ b/views/recruiter/add-recruitment.hbs
@@ -160,6 +160,11 @@
             <textarea class="form-control" name="benefit" id="benefit" cols="30" rows="10"></textarea>
         </div>
 
+        <div class="form-group mt-3">
+            <label for="deadlineSubmis" class="label-control">Ngày hết hạn</label>
+            <input type="date" name="deadlineSubmis" id="deadlineSubmis" class="form-control">
+        </div>
+
         <button class="btn btn-success mt-3" type="submit">
             Thêm mới
         </button>
