--- a/views/recruiter/create-profile.hbs
+++ b/views/recruiter/create-profile.hbs
@@ -1,7 +1,45 @@
 <div class="container">
-    <form action="" class="mt-3">
+    <form action="" class="mt-3" id="create-profile-company" enctype="multipart/form-data">
         Cập nhật thông tin HR <a href="">tại đây</a>
 
-        
+        <h2 class="text-center">Thông tin công ty</h2>
+        <div class="form-group">
+            <label for="name" class="label-control">Tên công ty (doanh nghiệp)</label>
+            <input type="text" class="form-control" name="name" id="name">
+        </div>
+
+        <div class="form-group mt-3">
+            <label for="logo" class="label-control">Logo và ảnh bìa công ty</label>
+            <input type="file" class="form-control" name="logo" id="logo" multiple>
+        </div>
+
+        {{!-- <div class="form-group mt-3">
+            <label for="coverImg" class="label-control">Ảnh bìa công ty</label>
+            <input type="file" class="form-control" name="coverImg" id="coverImg">
+        </div> --}}
+
+        <div class="form-group mt-3">
+            <label for="address" class="label-control">Địa chỉ công ty</label>
+            <input type="text" class="form-control" name="address" id="address">
+        </div>
+
+        <div class="form-group mt-3">
+            <label for="website" class="label-control">Website công ty</label>
+            <input type="text" class="form-control" name="website" id="website">
+        </div>
+
+        <div class="form-group mt-3">
+            <label for="employees" class="label-control">Số lượng nhân viên</label>
+            <input type="number" class="form-control" name="employees" id="employees">
+        </div>
+
+        <div class="form-group mt-3">
+            <label for="introduction" class="label-control">Giới thiệu công ty</label>
+            <textarea name="introduction" id="introduction" cols="30" rows="10" class="form-control"></textarea>
+        </div>
+
+        <input type="submit" value="Tạo mới" class="btn btn-success mt-3">
     </form>
 </div>
+
+<script src="/js/recruiter/create-profile.js"></script>
