Home page layout

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -172,7 +172,7 @@
                             <div class="recruit-sub">
                                 <div class="recruit-salary">
                                     <i class="fa-solid fa-location-dot"></i>
-                                    <span>{{address.district.name}} , {{address.province.name}}</span>
+                                    <span>{{address.district}} , {{address.province}}</span>
                                 </div>
 
                                 <div class="recuite-locatation">
@@ -202,7 +202,7 @@
                 <div class="col-lg-3 col-md-4 col-6">
                     <div class="hot-company-item">
                         <div class="company-main">
-                            <div class="company-img" style="background-image: url(/images/companies/{{avatarImg}})">
+                            <div class="company-img" style="background-image: url(/images/companies/{{logo}})">
                             </div>
                             <span class="company-name">{{name}}</span>
                         </div>
